[package]
name = "wukong-minimap"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hudhook = { version = "0.8.0", features = ["dx12"], default-features = false }
image = { version = "0.25.2", features = [
  "jpeg",
  "png",
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.11", features = ["blocking", "json"] }
once_cell = "1.18"

[build-dependencies]
