[package]
name = "wukong-minimap"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
hudhook = { path = "vendor/hudhook", features = [
  "dx12",
], default-features = false }
image = { version = "0.25.2", features = [
  "jpeg",
  "png",
  "webp",
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
once_cell = "1.18"
gilrs = { version = "0.11.0", features = ["xinput"], default-features = false }
# 添加 tracing-subscriber
tracing-subscriber = { version = "0.3.19", features = [
  "time",
  "local-time",
  "chrono",
] }
# 添加 tracing-appender，用于文件输出
tracing-appender = { version = "0.2" }
time = { version = "0.3.41", features = [
  "formatting",
  "parsing",
  "macros",
  "std",
  "local-offset",
] }

[build-dependencies]
